Update webpack config, babel, readme, add simple start page

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
   "presets": [["env", { "modules": false }], "stage-0", "react"],
   "plugins": ["react-hot-loader/babel"],
+  "env": {
+    "production": {
+      "presets": ["minify"]
+    }
+  }
 }
