--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "frontend-boilerplate-v1",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "NODE_ENV=development webpack-dev-server --open --config webpack.dev.js",
-    "build": "NODE_ENV=production webpack --config webpack.prod.babel.js"
+    "build": "NODE_ENV=production webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-minify": "^0.2.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
@@ -32,6 +33,9 @@
     "html-webpack-plugin": "^2.30.1",
     "postcss-loader": "^2.0.8",
     "style-loader": "^0.19.0",
+    "stylelint": "^8.4.0",
+    "stylelint-config-standard": "^18.0.0",
+    "sugarss": "^1.0.1",
     "uglifyjs-webpack-plugin": "^1.0.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4",
