--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": [["env", { "modules": false }], "stage-0", "react"],
-  "plugins": ["react-hot-loader/babel"],
+  "plugins": ["react-hot-loader/babel", "transform-class-properties"],
   "env": {
     "production": {
       "presets": ["minify"]
